Nest the text of img-placeholder inside a p tag

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="button">Sign up</button>
             </div> 
-            <div class="img-placeholder" style="display: flex; background-color: grey; justify-content: center; align-items: center; color:#E5E7EB; ;">this is a placeholder for an image</div>
-        </div>
+            <div class="img-placeholder"><p>this is a placeholder for an image</p></div>
+            </div>
     </header>
     <main>
         <div class="first">    
