Add class 'call' and 'layout'

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="third">
             <div class="action">
                 <div class="text">
-                    <p>Call to action! It's time!</p>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <p class="call">Call to action! It's time!</p>
+                    <p class="sign-up">Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="sign-up">
                     <button>Sign up</button>
